--- a/optima-bank-backend/.env
+++ b/optima-bank-backend/.env
@@ -1,5 +1,5 @@
 PORT=5000
-MONGO_URI=mongodb+srv://admin:admin123@cluster0.rrf2x8u.mongodb.net/OptimaBank?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=mongodb+srv://wanafiq415:C6Zr2sKKEcrNmGyI@cluster0.s4ivtyf.mongodb.net/test?retryWrites=true&w=majority&appName=Cluster0
 
 GOOGLE_CLIENT_ID=92764136173-ao7fmehfardp1esdb1jgk2349k6fq7n3.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
