--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.541.0",
     "nodemailer": "^7.0.3",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-slick": "^0.31.0",
     "slick-carousel": "^1.8.1"
