--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "express-session": "^1.18.1",
     "framer-motion": "^12.23.12",
     "jsbarcode": "^3.12.1",
-    "jspdf": "^3.0.1",
+    "jspdf": "^3.0.2",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.541.0",
     "nodemailer": "^7.0.3",
     "react": "^19.1.1",
