--- a/optima-bank-backend/package.json
+++ b/optima-bank-backend/package.json
@@ -22,4 +22,9 @@
     "slick-carousel": "^1.8.1"
   },
   "description": ""
+  "scripts": {
+  "start": "node server.js",
+  "build": "cd client && npm install && npm run build"
+},
+
 }
