--- a/optima-bank-backend/package.json
+++ b/optima-bank-backend/package.json
@@ -1,14 +1,15 @@
 {
   "name": "optima-bank-backend",
   "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
-  },
-  "keywords": [],
+  "main": "server.js",
+  "description": "",
   "author": "",
   "license": "ISC",
+  "scripts": {
+    "start": "node server.js",
+    "build": "cd client && npm install && npm run build",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "dependencies": {
     "cookie-session": "^2.1.0",
     "cors": "^2.8.5",
@@ -20,11 +21,5 @@
     "passport-google-oauth20": "^2.0.0",
     "react-slick": "^0.31.0",
     "slick-carousel": "^1.8.1"
-  },
-  "description": ""
-  "scripts": {
-  "start": "node server.js",
-  "build": "cd client && npm install && npm run build"
-},
-
+  }
 }
